# mamba-compression

./: analyse.py  hadamard_all_sweep_2.8b_optimized.csv  hadamard_sweep_2.8b_base.csv  hadamard_sweep_2.8b_optimized.csv  pyproject.toml
