[project]
name = "compression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "causal-conv1d>=1.5.3.post1",
    "datasets>=4.4.2",
    "mamba-ssm>=2.2.6.post3",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
